firmware-nonfree (20230625-3~exp2) UNRELEASED; urgency=medium

  * d/b/gencontrol.py: Remove support for encoding file version in filename
  * d/b/gencontrol.py: Remove check for .svn directories
  * d/b/gencontrol.py: Use path objects where possible

 -- Ben Hutchings <benh@debian.org>  Mon, 17 Jun 2024 19:44:17 +0100

firmware-nonfree (20230625-3~exp1) experimental; urgency=medium

  [ Diederik de Haas ]
  * Update to linux-support 6.8.11
    - ci: Add python3-dacite as Build Dependency
  * d/bin/update-modinfo: Add compressed modules support
  * ci: extract-source: Install `dpkg-dev` early and explicitly
  * Harmonize control field sequence
  * Remove constraints unnecessary since Buster (oldoldstable)
  * d/README.source: Update description wrt upstream
  * d/copyright: Update upstream Source URL
  * d/copyright: Fix double 'License: ' statement
  * d/copyright: Fix lintian's superfluous-file-pattern warnings
  * lintian: Fix mismatched-override and unused-override issues
  * amd-graphics: Sort defines entries and file stanzas
  * amd-graphics: Synchronize with 20230625's WHENCE file
  * atheros: Sort defines entries and file stanzas
  * atheros: Add missing file stanzas
  * atheros: Synchronize with 20230625's WHENCE file
  * bnx2: Sort defines entries and file stanzas
  * bnx2x: Sort defines entries and file stanzas
  * brcm80211: Sort defines entries and file stanzas
  * brcm80211: Add missing file stanzas
  * brcm80211: Synchronize with 20230625's WHENCE file
  * intel-sound: Sort defines entries and file stanzas
  * intel-sound: Add missing file stanzas
  * intel-sound: Synchronize with 20230625's WHENCE file
  * iwlwifi: Sort defines entries and file stanzas
  * iwlwifi: Synchronize with 20230625's WHENCE file (Closes: #1059458)
  * libertas: Sort defines entries and file stanzas
  * libertas: Synchronize with 20230625's WHENCE file
  * libertas: Move Prestera firmware to new firmware-marvell-prestera package