@@ -12,7 +12,7 @@ sys.path.insert(0, "debian/lib/python")
 sys.path.append(sys.argv[1] + "/lib/python")
 locale.setlocale(locale.LC_CTYPE, "C.UTF-8")
 
-from config import Config
+from config import Config, pattern_to_re
 from debian_linux.debian import BinaryPackage, PackageRelation, _ControlFileDict
 from debian_linux.debian import PackageDescription as PackageDescriptionBase
 import debian_linux.gencontrol
@@ -92,7 +92,19 @@ class GenControl(debian_linux.gencontrol.Gencontrol):
 
         self.do_source(packages)
         self.do_extra(packages, makefile)
+
+        self.file_errors = False
+        self.file_packages = {}
         self.do_main(packages, makefile)
+        for canon_path, package_suffixes in self.file_packages.items():
+            if len(package_suffixes) > 1:
+                print(f'E: {canon_path!s} is included in multiple packages:',
+                      ', '.join(f'firmware-{suffix}'
+                                for suffix in package_suffixes),
+                      file=sys.stderr)
+                self.file_errors = True
+        if self.file_errors:
+            raise Exception('error(s) found in file lists')
 
         self.write(packages, makefile)
 
@@ -152,44 +164,76 @@ class GenControl(debian_linux.gencontrol.Gencontrol):
             pass
         os.symlink('bug-presubj', 'debian/firmware-%s.bug-presubj' % package)
 
-        files_orig = config_entry['files']
+        files_include = [(pattern, pattern_to_re(pattern))
+                         for pattern in config_entry['files']]
+        files_exclude = [pattern_to_re(pattern)
+                         for pattern in config_entry.get('files-excluded', [])]
+        files_added = set()
+        files_unused = set()
         files_real = {}
-        files_unused = []
         links = {}
         links_rev = {}
 
-        # Look for additional and replacement files in binary package config
+        # List all additional and replacement files in binary package
+        # config so we can:
+        # - match dangling symlinks which pathlib.Path.glob() would ignore
+        # - warn if any are unused
         for root, dir_names, file_names in os.walk(package_dir):
             root = pathlib.Path(root)
-
             for name in file_names:
-                # Exclude files not expected to be installed as firmware
-                if root == package_dir \
-                   and name in ['defines', 'LICENSE.install',
-                                'update.py', 'update.sh']:
-                    continue
+                if not (root == package_dir \
+                        and name in ['defines', 'LICENSE.install',
+                                     'update.py', 'update.sh']):
+                    canon_path = root.relative_to(package_dir) / name
+                    files_added.add(canon_path)
+                    files_unused.add(canon_path)
 
-                cur_path = root / name
-                canon_path = root.relative_to(package_dir) / name
-                canon_name = str(canon_path)
-                if canon_name in files_orig:
+        for pattern, pattern_re in files_include:
+            matched = False
+            matched_more = False
+
+            for paths, is_added in [
+                (((canon_path, package_dir / canon_path)
+                  for canon_path in files_added
+                  if pattern_re.fullmatch(str(canon_path))),
+                 True),
+                (((cur_path.relative_to(install_dir), cur_path)
+                  for cur_path in install_dir.glob(pattern)),
+                 False)
+            ]:
+                for canon_path, cur_path in paths:
+                    canon_name = str(canon_path)
+                    if any(exc_pattern_re.fullmatch(canon_name)
+                           for exc_pattern_re in files_exclude):
+                        continue
+
+                    matched = True
+
+                    # Skip if already matched by earlier pattern or in
+                    # other directory
+                    if canon_path in files_real or canon_path in links:
+                        continue
+
+                    matched_more = True
+                    if is_added:
+                        files_unused.remove(canon_path)
                     if cur_path.is_symlink():
                         links[canon_path] = cur_path.readlink()
-                    else:
+                    elif cur_path.is_file():
                         files_real[canon_path] = cur_path
-                    continue
 
-                files_unused.append(canon_name)
+                    self.file_packages.setdefault(canon_path, []) \
+                                      .append(package)
 
-        # Take all the other files from upstream
-        for canon_name in files_orig:
-            canon_path = pathlib.Path(canon_name)
-            if canon_path not in files_real and canon_path not in links:
-                cur_path = install_dir / canon_path
-                if cur_path.is_symlink():
-                    links[canon_path] = cur_path.readlink()
-                elif cur_path.is_file():
-                    files_real[canon_path] = cur_path
+            # Non-matching pattern is an error
+            if not matched:
+                print(f'E: {package}: {pattern} did not match anything',
+                      file=sys.stderr)
+                self.file_errors = True
+            # Redundant pattern deserves a warning
+            elif not matched_more:
+                print(f'W: {package}: pattern {pattern} is redundant with earlier patterns',
+                      file=sys.stderr)
 
         for canon_path in links:
             link_target = ((canon_path.parent / links[canon_path])
@@ -198,13 +242,15 @@ class GenControl(debian_linux.gencontrol.Gencontrol):
             links_rev.setdefault(link_target, []).append(canon_path)
 
         if files_unused:
-            print('W: %s: unused files:' % package, ' '.join(files_unused),
+            print(f'W: {package}: unused files:',
+                  ', '.join(str(path) for path in files_unused),
                   file=sys.stderr)
 
-        makeflags['FILES'] = ' '.join(["%s:%s" % (i[1], i[0]) for i in sorted(files_real.items())])
+        makeflags['FILES'] = ' '.join([f'"{source}":"{dest}"'
+                                       for dest, source in sorted(files_real.items())])
         vars['files_real'] = ' '.join(["/lib/firmware/%s" % i for i in config_entry['files']])
 
-        makeflags['LINKS'] = ' '.join(["%s:%s" % (link, target)
+        makeflags['LINKS'] = ' '.join([f'"{link}":"{target}"'
                                        for link, target in sorted(links.items())])
 
         files_desc = ["Contents:"]
@@ -215,13 +261,16 @@ class GenControl(debian_linux.gencontrol.Gencontrol):
         wrap = TextWrapper(width = 71, fix_sentence_endings = True,
                            initial_indent = ' * ',
                            subsequent_indent = '   ').wrap
-        for canon_name in config_entry['files']:
-            canon_path = pathlib.Path(canon_name)
+        for canon_path, is_link in sorted(
+            [(path, False) for path in files_real]
+            + [(path, True) for path in links]
+        ):
+            canon_name = str(canon_path)
             firmware_meta_list.append(self.substitute(firmware_meta_temp,
                                                       {'filename': canon_name}))
             for module_name in self.firmware_modules.get(canon_name, []):
                 module_names.add(module_name)
-            if canon_path in links:
+            if is_link:
                 continue
             cur_path = files_real[canon_path]
             c = self.config.get(('base', package, canon_name), {})
