@@ -3,6 +3,8 @@ firmware-nonfree (20230625-3~exp2) UNRELEASED; urgency=medium
   * d/b/gencontrol.py: Remove support for encoding file version in filename
   * d/b/gencontrol.py: Remove check for .svn directories
   * d/b/gencontrol.py: Use path objects where possible
+  * d/b/{gencontrol,check_upstream}.py: Support wildcards in file lists
+    (Closes: #1035505)
 
  -- Ben Hutchings <benh@debian.org>  Mon, 17 Jun 2024 19:44:17 +0100
 
